apps/base/olah/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: olah
  labels:
    app.kubernetes.io/name: olah
