apps/base/olah/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: olah
  namespace: olah
  labels:
    app.kubernetes.io/name: olah
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: olah
  ports:
    - name: http
      port: 80
      targetPort: 8080
