apps/base/olah/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: olah
  namespace: olah
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
    - host: hf.fog.chalko.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: olah
                port:
                  number: 80
  tls:
    - hosts:
        - hf.fog.chalko.com
      secretName: olah-tls
